# lander-2

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  sdkconfig  sdkconfig.backup.idf55  sdkconfig.old  servo.cpp  workspace.code-workspace
.cache/clangd/index/: BNO08x.cpp.B8014F62A78E2293.idx  BNO08x.hpp.D7AD4B583EA06D07.idx  BNO08xCbGeneric.hpp.7668D2E697E7BF7A.idx  BNO08xCbParamRptID.hpp.35B82234150FE54A.idx  BNO08xCbParamVoid.hpp.02DEAB0A7928C67F.idx  BNO08xGlobalTypes.hpp.1B9C25ECF30AAC4B.idx  BNO08xPrivateTypes.hpp.771083FDEC111574.idx  (+116 more)
components/esp32-dshot-master/: DShotRMT.cpp
gps/: CMakeLists.txt
gps/comms/: CMakeLists.txt  Parser.cpp  Parser.h  comm.cpp  comm.h  uart.cpp  uart.h
gps/ground-station/: CMakeLists.txt
gps/rover/: CMakeLists.txt
ground-station/: .gitignore  CMakeLists.txt  README.md  gui.py  requirements.txt  sdkconfig
ground-station/main/: CMakeLists.txt  esp_now_receiver.cpp  esp_now_receiver.h  main.cpp
lander/: .gitignore  msg_editor.py  partitions.csv  sdkconfig.defaults  seq_editor.py
lander/main/: CMakeLists.txt  config.cpp  espnow_data.hpp  espnow_init.cpp  espnow_init.hpp  globalvars.cpp  globalvars.hpp  imu_init.cpp  imu_init.hpp  main.cpp  motor_init.cpp  motor_init.hpp
main/: CMakeLists.txt  Kf_symbolic.cpp  Kf_symbolic.hpp  config.hpp  espnow_data.hpp  espnow_init.cpp  espnow_init.hpp  globalvars.cpp  globalvars.hpp  imu_init.cpp  lora_init.c  lora_init.cpp  lora_init.h  lora_init.hpp  main.cpp  motor_init.cpp  motor_init.hpp  servo.cpp  servo.hpp
main/i2c/: bmp390.cpp  bmp390.hpp  i2c_setup.cpp  i2c_setup.hpp
(+20 files in other folders)
