idf_component_register(SRCS "main.cpp"
                         "motor_init.cpp"
                         "imu_init.cpp"
                         "globalvars.cpp"
                         "config.cpp"
                         "espnow_init.cpp"
                         "i2c/i2c_setup.cpp"
                         "i2c/servo.cpp"
                         "i2c/bmp390.cpp"
                    INCLUDE_DIRS "i2c"
                    REQUIRES esp32_BNO08x esp_wifi esp32-dshot-master nvs_flash)
